--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="estilo/retrato.css" media="screen and (orientation: portrait)">
 </head>
 <body>
-    <div class="topo">
+    <div id="divjogos" class="topo">
         <h1 style="text-shadow:1px 1px 1px rgba(0, 0, 0, 0.561) ;">Jogos</h1>
         <h2>21º Rodada</h2>
     </div>
@@ -136,7 +136,7 @@
     </section>
 
     <div class="topo">
-        <h1 style="color:#a7a7a7 ;">Próxima Rodada...</h1>
+        <h1 id="h1unico" style="color:black ;">Próxima Rodada...</h1>
         <h2>22º Rodada</h2>
     </div>
 
