--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                             x
                         </p>
                         <h3>
-                            <p></p>
+                            <p>Atlético-go</p>
                         </h3>
                     </div>
                     <div class="time-2 time">
