--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         </ul>
     </section>
     <footer>
-        <p>Feito por <a href="https://www.instagram.com/alex_jjunio/">@alex_jjunio</a></p>
+        <p>Feito por <a href="https://github.com/AlexJjunio">Alex_jjunio</a></p>
     </footer>
 </body>
 </html>
