--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p class="info"><span class="data">Sáb 06/08/2022</span> <span class="local">Morumbi</span> <span class="hora">20:30</span></p>
                 <div class="time-1 time">
                     <p>São Paulo</p>
-                    <img class="logo" src="imgs/Flamengo-2018.svg" alt="Logo Goiás">
+                    <img class="logo" src="imgs/sao-paulo.svg" alt="Logo Goiás">
                 </div>
                     <div class="placar">
                         <h3>
