--- a/index.html
+++ b/index.html
@@ -225,12 +225,12 @@
                             x
                         </p>
                         <h3>
-                            <p>Atlético-go</p>
+                            <p></p>
                         </h3>
                     </div>
                     <div class="time-2 time">
                         <img class="logo" src="imgs/atletico-go-2020.svg" alt="Logo Avaí">
-                        <p></p>
+                        <p>Atlético-go</p>
                     </div>
             </li>
 
@@ -253,7 +253,7 @@
                     </div>
                     <div class="time-2 time">
                         <img class="logo" src="imgs/atletico-mg.svg" alt="Logo Avaí">
-                        <h3><p>Atlético-MG</p></h3>
+                        <p>Atlético-MG</p><
                     </div>
             </li>
         </ul>
