--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                     </div>
                     <div class="time-2 time">
                         <img class="logo" src="imgs/atletico-mg.svg" alt="Logo Avaí">
-                        <p>Atlético-MG</p><
+                        <p>Atlético-MG</p>
                     </div>
             </li>
         </ul>
